[metadata]
name = pyetho
version = 0.0.1
author = SathishKumar paramasivam Et al.
author_email = i18nsolutionspy@gmail.com
description = Exploration of World Languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/i18nsolutionspy/Ethnologue
project_urls =
    Bug Tracker = https://github.com/i18nsolutionspy/Ethnologue/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
etho = data/etho.json

[options.data_files]
data/etho.json = src/etho/data/etho.json